--- a/app/styles/sections/home.scss
+++ b/app/styles/sections/home.scss
@@ -1,3 +1,15 @@
 .home-science-image {
-    top: -20px;
+    //top: -100px;
+    //margin: -125px 25% 0 0;
+    //top: 20px;
+    margin: -80px 0 -80px 0;
+}
+
+.home-boxes {
+    //top: -200px;
+    margin-top: 40px;
+}
+
+.home-create-account {
+    font-size: 18px;
 }
